--------------------------
0.3-7	15-Apr-2013
        o 'valindex'     : false warning fixed. 
                           This warning raised the message "'sim' and 'obs' are empty or they do not have any common pair of elements with data !!",
                           even when 'sim' and 'obs' were fully compatible.
        o 'pbiasfdc'     : internal: 'hydroTSM::fdc' was replaced by 'fdc' 
        o 'plotbandsonly': internal: 'hydroTSM::vector2zoo' was replaced by 'zoo' 
        o 'plot2'        : -) internal: 'hydroTSM::vector2zoo' was replaced by 'zoo' 
                           -) internal: 'hydroTSM::drawTimeAxis' was replaced by 'drawTimeAxis' 

0.3-6	22-Mar-2013
        o 'gof'         : -) now it works with matrices/data.frames of zoo/xts class. Thanks to L. Pagliero !
                          -) new arguments 's' and 'method' which are passed to the 'KGE' function ('out.type' is fixed to "single")
                          -) new argument 'j', which is passed to the 'mNSE' function
                          -) new argument 'norm', which is passed to the 'nrmse' function                          
                          -) new arguments 'lQ.thr' and 'hQ.thr', which are passed to the (optional) 'pbiasfdc' function       
        o 'NSE'         : -) now it works with matrices/data.frames of zoo class.
        o 'me'          : -) now it works with matrices/data.frames of zoo class.
        o 'mae'         : -) now it works with matrices/data.frames of zoo class.
        o 'mse'         : -) now it works with matrices/data.frames of zoo class.
        o 'rmse'        : -) now it works with matrices/data.frames of zoo class.     
        o 'rsr'         : -) now it works with matrices/data.frames of zoo class.                                                          
        o 'rSD'         : -) now it works with matrices/data.frames of zoo class.                                                          